[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "colorama>=0.4.6",
    "fake-useragent>=2.2.0",
    "faker>=40.11.0",
    "flask>=3.1.3",
    "pyjwt>=2.12.1",
    "pysocks>=1.7.1",
    "pytelegrambotapi>=4.32.0",
    "requests>=2.32.5",
    "requests-toolbelt>=1.0.0",
    "schedule>=1.2.2",
    "tele>=0.0.0",
    "urllib3>=2.6.3",
    "user-agent>=0.1.14",
]
